# mapreduce

./: .gitignore  CMakeLists.txt  correct_huge.txt  executor.cpp  executor.h  gen_huge.py  generator.py  huge_input.txt  main.cpp  map_script  map_script.cpp  mapreduce.cpp  mapreduce.h  reduce_script  reduce_script.cpp  result.txt  sort_result.txt  table_io.cpp  table_io.h  urls.txt  wiki.py  wiki_map.py  wiki_reduce.py  words.txt
